syntax = "proto3";

package block;

service Transfer {
	rpc Read(ReadRequest) returns (ReadResponse) {}
	rpc Write(WriteRequest) returns (WriteResponse) {}
}

message ReadRequest {
	string fileName = 1;
	int64 offset = 2;
	int64 length = 3;
}

message ReadResponse {
	string result = 1;
	bytes context = 2;
}

message WriteRequest {
	string fileName = 1;
	int64 offset = 2;
	int64 length = 3;
	bytes context = 4;
}

message WriteResponse {
	string result = 1;
}
